fixed dropdown z-index bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -198,10 +198,6 @@ footer {
     min-width: 15rem;
   }
 
-  .description {
-    position: relative;
-  }
-
   footer {
     padding: 2rem;
   }
